<resources>
    <string name="app_name">DOCUMEDX!</string>
    <string name="app_name_for_intro">DOCUMEDX</string>

    <!--For intro page-->
    <string name="continue_as_for_intro_page_text"><b>Continue as?</b></string>

    <!--For sign up -->
    <string name="SignUp_text"><b>Sign Up</b></string>
    <string name="Input_field_first_name_text"><b>First Name</b></string>
    <string name="Input_field_last_name_text"><b>Last Name</b></string>
    <string name="Input_field_Phone_no_text"><b>Phone No</b></string>
    <string name="Input_field_set_password_text"><b>Set Password</b></string>
    <string name="Input_field_confirm_password_text"><b>Confirm Password</b></string>
    <string name="Input_field_Email_Address_text"><b>Email address</b></string>
    <string name="Input_field_Address_no_text"><b>Address</b></string>
    <string name="Input_field_Medical_history_text"><b>Medical History</b></string>
    <string name="Already_have_an_acc_login">Already have an account? <b>Login</b></string>

    <!--For Health info gathering page-->
    <string name="Input_field_blood_group_text"><b>Blood Group</b></string>
    <string name="Input_field_height_text"><b>Height(cm)</b></string>
    <string name="Input_field_weight_text"><b>Weight(kg)</b></string>
    <string name="Input_field_sex_text"><b>Sex</b></string>
    <string name="Input_field_age_text"><b>Age</b></string>
    <string name="Input_field_current_ilness_text"><b>Current Ilness</b></string>
    <string name="Welcome_text">Welcome To</string>
    <string name="Notice_text">Kindly fill the following information accurately as it will be useful to create your dashboard. This information will be stored in a database only accesseble by Developers</string>
    <string name="Caption_for_current_ilness_Input_field">Name a disease that you are currently undergoing treatment for</string>
    <string name="Continue_btn_text"><b>Continue</b></string>

    <!--For Login page of staff-->
    <string name="Empty_Edit_Text"><b></b></string>
    <string name="staff_Login_text"><b>Login</b></string>
    <string name="Input_field_staff_id_text"><b>Staff Id</b></string>
    <string name="Input_field_staff_pass_text"><b>Password</b></string>
    <string name="Create_staff_acc">Create an account?<b> Sign Up</b></string>
    <string name="Input_field_Dob_text"><b>Date of Birth</b></string>
    <string name="Input_field_Qualification_text"><b>Qualification</b></string>
    <string name="Input_field_employee_id_text"><b>Employee Id</b></string>
    <string name="Input_field_employee_department_text"><b>Department</b></string>
    <string name="Input_field_employee_role_text"><b>Role</b></string>
    <string name="Input_field_associated_Hospital_text"><b>Associated Hospital</b></string>

    <!--For Organization-->
    <string name="hospital_regiteration_text"><b>Registration</b></string>
    <string name="Input_field_Hospital_Name_text"><b>Hospital Name</b></string>
    <string name="Input_field_Licence_text"><b>Registration licence</b></string>
    <string name="Input_field_Type_of_hospital_text"><b>Type(Govt,private,clinic,etc)</b></string>
    <string name="Input_Field_Already_Registered_login">Already Registered? <b>Login</b></string>

    <!--For organization Dashboard-->

    <string name="Profile_Text"><b>Profile</b></string>
    <string name="Staff_text"><b>Staffs</b></string>
    <string name="org_name_text"><b>Name</b></string>
    <string name="org_type"><b>Type(Clinic, Govt, Pvt)</b></string>
    <string name="org_phone_text"><b>Phone no</b></string>
    <string name="org_email_text"><b>Email</b></string>
    <string name="org_Licence_text"><b>Licence</b></string>
    <string name="Veiw_more_text"><b>view more</b></string>
    <string name="Staff_name_text"><b>Staff Name</b></string>
    <string name="Patient_name_text"><b>Patient Name</b></string>
    <string name="org_dashboard"><b>Organization Dashboard</b></string>
    <string name="dashboard"><b>Dashboard</b></string>
    <string name="org_Profile_heading"><b>Organization Profile</b></string>
    <string name="org_Go_TO_dashboard"><b>Go to Dash</b></string>
    <string name="org_patient_text"><b>Patients</b></string>
    <string name="upload_report_btn"><b>Upload Report</b></string>
    <string name="view_report_btn"><b>View Reports</b></string>
    <string name="Org_subTitle">Documedx - Secure Medical Reports Manager</string>


    <!-- Dashboard Strings -->
    <string name="medical_dashboard">Medical Dashboard</string>
    <string name="professional_portal">Professional Portal</string>
    <string name="documedx_subtitle">DocuMedX - Secure Medical Document Management</string>
    <string name="my_profile">My Profile</string>
    <string name="my_patients">My Patients</string>
    <string name="view_more">VIEW MORE</string>

    <!-- Patient Related Strings -->
    <string name="patient_details">Patient Details</string>
    <string name="reports_count">%d Reports Available</string>
    <string name="no_reports_available">No reports available</string>
    <string name="add_prescription">Add Prescription</string>

    <!-- Report Related Strings -->
    <string name="report_received_on">Received on: %s</string>
    <string name="view_report">View Report</string>

    <!-- Camera & PDF Strings -->
    <string name="camera_not_available">Camera not available</string>
    <string name="camera_permission_required">Camera permission is required to capture prescription</string>
    <string name="prescription_sent_successfully">Prescription sent successfully</string>
    <string name="error_creating_pdf">Error creating PDF</string>
    <string name="error_processing_image">Error processing image</string>
    <string name="no_pdf_viewer_found">No PDF viewer found</string>

    <!-- General Strings -->
    <string name="loading">Loading...</string>
    <string name="error_occurred">An error occurred</string>
    <string name="try_again">Try Again</string>

    <string name="dp_day">Day</string>
    <string name="dp_month">Month</string>
    <string name="dp_Year">Year</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <!-- Gemini api key -->
    <string name="gemini_api_key">AIzaSyAaC2tx2A8jUXH42OtMAWghEoHhd7qQljQ</string>

</resources>