<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main"
    android:background="@color/white">

    <!--Logo-->
    <ImageView
    android:id="@+id/appLogo"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:contentDescription="@string/app_name"
    android:src="@drawable/documedx"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.04" />

    <!--Register-->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hospital_regiteration_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <!--Organization name-->
    <EditText
        android:id="@+id/orgNameInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_Hospital_Name_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerText" />

    <!--Address-->
    <EditText
        android:id="@+id/orgAddressInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_Address_no_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgNameInputField" />

    <!--Number-->
    <EditText
        android:id="@+id/argPhoneInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_Phone_no_text"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgAddressInputField" />

    <!--Email-->
    <EditText
        android:id="@+id/orgEmailAddressInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_Email_Address_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/argPhoneInputField" />

    <!--Set Pass-->
    <EditText
        android:id="@+id/orgSetPassInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_set_password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgEmailAddressInputField" />

    <!--confirm Pass-->
    <EditText
        android:id="@+id/orgConfirmPassInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_confirm_password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgSetPassInputField" />

    <!--Licence-->
    <EditText
        android:id="@+id/orgLicenceInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_Licence_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgConfirmPassInputField" />

    <!--Type-->
    <EditText
        android:id="@+id/orgTypeInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_Type_of_hospital_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgLicenceInputField" />

    <!--Sign up button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@+id/orgTypeInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/SignUp_text"
        android:layout_marginTop="60dp"
        />

    <!--Text field-->
    <TextView
        android:id="@+id/alreadyAnAccText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Input_Field_Already_Registered_login"
        app:layout_constraintTop_toBottomOf="@id/signUpBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>