<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/SignUpPage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:focusableInTouchMode="true" >

    <!--Adding the main Logo of the app-->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/documedx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <!--Sign up Title-->
    <TextView
        android:id="@+id/SignUpPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <!--Text Field for user input-->
    <!--First Name-->
    <EditText
        android:id="@+id/firstNameInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/Input_field_first_name_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpPageTitle" />

    <!--Last name-->
    <EditText
        android:id="@+id/lastNameInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/Input_field_last_name_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameInputField" />

    <!--Phone no-->
    <EditText
        android:id="@+id/phoneNoInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        android:inputType="phone"
        android:hint="@string/Input_field_Phone_no_text"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@id/lastNameInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <!--Set Password-->
    <EditText
        android:id="@+id/setPasswordInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        android:inputType="textPassword"
        android:hint="@string/Input_field_set_password_text"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNoInputField"
        android:layout_marginTop="20dp"
        />

    <!--Confirm password-->
    <EditText
        android:id="@+id/confirmPasswordInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        android:inputType="textPassword"
        android:hint="@string/Input_field_confirm_password_text"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@id/setPasswordInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <!--Address-->
    <EditText
        android:id="@+id/userAddressInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        android:inputType="text"
        android:hint="@string/Input_field_Email_Address_text"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <!--Gender-->
    <EditText
        android:id="@+id/sexInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAddressInputField"
        android:inputType="text"
        android:hint="@string/Input_field_sex_text"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        />

    <!--DOB-->
    <EditText
        android:id="@+id/DOBInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexInputField"
        android:inputType="date"
        android:hint="@string/Input_field_Dob_text"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        />

    <!--Employee id-->
    <EditText
        android:id="@+id/employeeIdInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOBInputField"
        android:inputType="text"
        android:hint="@string/Input_field_employee_id_text"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        />

    <!--department-->
    <EditText
        android:id="@+id/departmentInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeIdInputField"
        android:inputType="text"
        android:hint="@string/Input_field_employee_department_text"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        />

    <!--role-->
    <EditText
        android:id="@+id/employeeRoleInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departmentInputField"
        android:inputType="text"
        android:hint="@string/Input_field_employee_role_text"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        />

    <!--sign up button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@+id/employeeRoleInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/SignUp_text"
        android:layout_marginTop="60dp"
        />

    <!--Text to navigate to login page-->
    <TextView
        android:id="@+id/alreadyAnAccText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Already_have_an_acc_login"
        app:layout_constraintTop_toBottomOf="@id/signUpBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>