<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <!--Adding the main Logo of the app-->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/documedx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <!--Sign up Title-->
    <TextView
        android:id="@+id/SignUpPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_Login_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />

    <!--Text Field for user input-->
    <!--Id Staff-->
    <EditText
        android:id="@+id/firstNameInputField"
        style="@style/signUpPageEditTextStyles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/Input_field_staff_id_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpPageTitle" />

    <!--Password-->
    <EditText
        android:id="@+id/lastNameInputField"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/signUpPageEditTextStyles"
        android:inputType="text"
        android:hint="@string/Input_field_staff_pass_text"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@id/firstNameInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />



    <!--Login button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInputField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/staff_Login_text"
        android:layout_marginTop="60dp"
        />

    <!--Text to navigate to sign up page-->
    <TextView
        android:id="@+id/alreadyAnAccText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Create_staff_acc"
        app:layout_constraintTop_toBottomOf="@id/signUpBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textColor="@color/color_palette_5"
        />
</androidx.constraintlayout.widget.ConstraintLayout>